sidebar overflow issues

--- a/public/style.css
+++ b/public/style.css
@@ -43,7 +43,7 @@ h1 {
 #sidebar {
   min-width: 250px;
   max-width: 250px;
-  min-height: 100vh;
+  min-height: 100%;
 }
 /* 
 #sidebar.active {
@@ -52,14 +52,16 @@ h1 {
 
 #sidebar-wrapper {
   z-index: 1000;
-  position: fixed;
   left: 250px;
   width: 10%;
   top: 0;
   height: 93%;
   margin-left: -250px;
   background: #3b4057;
+  position: fixed;
 } 
+
+
 /*
 .sidebar-nav {
   position: absolute;
@@ -68,43 +70,41 @@ h1 {
   margin: 0;
   padding: 0;
   list-style: none;
-}
+}*/
 
-.sidebar-nav li {
+/* .sidebar-nav li {
   text-indent: 20px;
   line-height: 40px;
-}
+} */
 
-.sidebar-nav li a {
+/* .sidebar-nav li a {
   display: block;
   text-decoration: none;
   color: #999999;
-}
+}  */
 
-.sidebar-nav li a:hover {
+/* .sidebar-nav li a:hover {
   text-decoration: none;
   color: #fff;
   background: rgba(255, 255, 255, 0.2);
-}
+} */
 
-.sidebar-nav li a:active, .sidebar-nav li a:focus {
-  text-decoration: none;
-}
+/* .sidebar-nav li a:active, .sidebar-nav li a:focus {
+  text-decoration: none
+} */
 
-.sidebar-nav>.sidebar-brand {
-  height: 65px;
-  font-size: 18px;
-  line-height: 60px;
-}
-
+.sidebar-brand {
+  line-height: 15%;
+} 
+/* 
 .sidebar-nav>.sidebar-brand a {
   color: #999999;
-}
+} */
 
-.sidebar-nav>.sidebar-brand a:hover {
+/* .sidebar-nav>.sidebar-brand a:hover {
   color: #fff;
   background: none;
-} */
+}  */
 
 #sidebar-logo {
   height: 35%;
